<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/top_rounded">

        <View
            android:id="@+id/view_top"
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/roundbutton"
            android:backgroundTint="@color/colorSecondaryLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/order_details"
            android:textAlignment="center"
            android:textColor="@color/colorSecondary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/view_top" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart_items_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingHorizontal="16dp"
            app:layout_constraintHeight_max="350dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:itemCount="3"
            tools:listitem="@layout/item_cart_summary" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_summary"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:background="#4DFFFFFF"
            app:layout_constraintTop_toBottomOf="@id/rv_cart_items_summary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_label_sub_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_sub_total"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_summary" />

        <TextView
            android:id="@+id/tv_sub_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            tools:text="$120"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_label_sub_total"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_label_delivery_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/delivery"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_sub_total" />

        <TextView
            android:id="@+id/tv_delivery_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_label_delivery_charge"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Free" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_total"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:background="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_delivery_charge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_label_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/total"
            android:textColor="@color/colorSecondary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_total" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:textColor="@color/colorSecondary"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_label_total"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="$120" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
